examples/test/testpolicy18909.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18909
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key26: value47
      key41: value19
      key40: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value6
          key42: value0
      podSelector:
        matchLabels:
          key41: value26
